RESOLVED FIXED151209
B3 should be able to compile Patchpoints with Register and Any constraints
https://bugs.webkit.org/show_bug.cgi?id=151209
Summary B3 should be able to compile Patchpoints with Register and Any constraints
Filip Pizlo
Reported 2015-11-12 11:27:11 PST
Patch forthcoming.
Attachments
the patch (11.47 KB, patch)
2015-11-12 11:38 PST, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2015-11-12 11:38:09 PST
Created attachment 265414 [details] the patch
WebKit Commit Bot
Comment 2 2015-11-12 11:40:57 PST
Attachment 265414 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/b3/testb3.cpp:2706: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2707: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2723: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2736: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2738: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2747: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2762: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2763: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2767: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2774: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2791: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2792: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] Total errors found: 12 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2015-11-12 12:38:52 PST
Comment on attachment 265414 [details] the patch r=me
Filip Pizlo
Comment 4 2015-11-12 12:41:30 PST
Note You need to log in before you can comment on or make changes to this bug.