Source/JavaScriptCore/b3/B3PatchpointValue.cpp
@@ -36,6 +36,7 @@ PatchpointValue::~PatchpointValue()
 
 PatchpointValue::PatchpointValue(unsigned index, Type type, Origin origin)
     : StackmapValue(index, CheckedOpcode, Patchpoint, type, origin)
+    , effects(Effects::forCall())
 {
 }
 
